--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Landing Page</title>
+    <meta name="google-site-verification" content="sn8Z-xM-uJng_Q0-_Rw6xbmXI1TMIu0vZ0_Lv6CwydY" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
